This small update includes minor style adjustments to items in file-sources, removal of file processing logs, and the addition of a fade-in transition to photo-carousel when it is restarted after image-editor is closed.

--- a/sources/device-file-card.html
+++ b/sources/device-file-card.html
@@ -14,7 +14,7 @@
   }
 
   #dropzone {
-    --dz-color:       var(--afs-gradient-secondary-text-color);
+    --dz-color:       var(--app-primary-color);
     --dz-hover-color: var(--afs-gradient-secondary-text-color);
   }
 
