--- a/sources/web-file-card.html
+++ b/sources/web-file-card.html
@@ -18,6 +18,11 @@
   }
 
   .shared-paper-input {
+    border-radius:    3px;
+    border:           4px solid var(--app-primary-color);
+    padding:          0px 8px;
+    background-color: var(--app-background-color);
+
     --paper-input-container-color:       var(--afs-gradient-secondary-text-color);
     --paper-input-container-input-color: var(--afs-gradient-text-color);
     --paper-input-container-focus-color: var(--afs-gradient-focus-color);
