Moved progress-bar into shared folder as it is now available in the camera-roll as well as the file-sources overlays. Added a new public api property, called noUploadConfirm. When it is set, the upload process for each file will begin as soon as any on-device pre-processing is complete, without any user confirmation. Updated deps.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -43,10 +43,12 @@
                   maxfiles="[[maxfiles]]"
                   maxsize="[[maxsize]]"
                   multiple="[[multiple]]"
+                  no-upload-confirm="[[noUploadConfirm]]"
                   unit="[[unit]]"
                   on-delete-previous="__deletePrevious"
                   on-open-list="openList"
                   on-open-save-as-modal="__openSaveAsModal"
+                  on-progress-changed="__progressChangedHandler"
                   on-upload-done="__uploadDone"
                   on-upload-updated="__uploadUpdated">
 </afs-file-sources>
@@ -70,6 +72,7 @@
   <afs-camera-roll id="cameraRoll"
                    coll="[[coll]]"
                    data="[[_dbData]]"
+                   progress="[[_progress]]"
                    uploads="[[_uploads]]"
                    on-list-overlay-closed="__listOverlayClosedHandler">
   </afs-camera-roll>
