Solved an issue on Safari where it would sometimes resolve the processFiles promise before calling the last processedCallback. This would result in the function returning early because the number of processed files would be less than the expected number of files to process. When this was the case, the upload process would never begin. Corrected logic for controlling the progress bar in camera-roll. Set z-index to -1 for all background ::before elements in camera-roll so they would not overlay their sibling elements, which was the case for the progress bar. Added single-line truncating styles to items in metadata-page.

--- a/editors/afs-metadata-page.html
+++ b/editors/afs-metadata-page.html
@@ -181,7 +181,7 @@
 
   <div class="info-item">
     <iron-icon icon="app-icons:event"></iron-icon>
-    <span>[[_dateTime]]</span>
+    <span class="shared-single-line-truncate">[[_dateTime]]</span>
   </div>
 
   <div class="info-item">
@@ -196,18 +196,18 @@
 
   <div class="info-item">
     <iron-icon icon="afs-file-icons:folder"></iron-icon>
-    <span>[[_dirName]]</span>
+    <span class="shared-single-line-truncate">[[_dirName]]</span>
   </div>
 
   <div class="info-item">
     <iron-icon icon="app-icons:fingerprint"></iron-icon>
-    <span>[[item.uid]]</span>
+    <span class="shared-single-line-truncate">[[item.uid]]</span>
   </div>
 
   <div class="info-item"
        hidden="[[_hideGPSDisplay]]">
     <iron-icon icon="afs-file-icons:place"></iron-icon>
-    <span>[[_gps]]</span>
+    <span class="shared-single-line-truncate">[[_gps]]</span>
   </div>
 
   <app-map id="map" 
