Corrected single line truncating styles for info-items in metadata-page. Updated deps.

--- a/editors/afs-metadata-page.html
+++ b/editors/afs-metadata-page.html
@@ -26,7 +26,7 @@
   iron-icon {
     min-height:   24px;
     min-width:    24px;
-    margin-right: 4px;
+    margin-right: 8px;
   }
 
   paper-input[focused] iron-icon,
@@ -73,7 +73,8 @@
   }
 
   .info-item {
-    margin: 16px 0px;
+    display: flex;
+    margin:  16px 0px;
   }
 
   #map {
