Tweaked the file accept type display string to be more descriptive. Removed the period from the end of the string as to better match other subtitle text. Changed camera-roll from animating from the bottom to from the right side. Updated deps.

--- a/lists/afs-camera-roll.html
+++ b/lists/afs-camera-roll.html
@@ -125,7 +125,7 @@
 
 <app-header-overlay id="overlay"
                     header-size="1"
-                    prebuilt-animation="from-bottom"
+                    prebuilt-animation="from-right"
                     reveal-header
                     threshold="64"
                     title="My Photos"
