--- a/sources/afs-file-sources.html
+++ b/sources/afs-file-sources.html
@@ -134,7 +134,7 @@
          hidden="[[_hideContent]]" 
          slot="content">
 
-      <div id="types">[[_acceptableTypes]]</div>
+      <div id="types">Accepting [[_acceptableTypes]]</div>
 
 
       <div id="grid">
