--- a/lists/afs-multiselect-btns.html
+++ b/lists/afs-multiselect-btns.html
@@ -5,6 +5,10 @@
     display: flex;
   }
 
+  :host([hidden]) {
+    display: none;
+  }
+
   .btn {
     opacity:    0;
     transform:  translateX(100%);
