--- a/lists/afs-camera-roll.html
+++ b/lists/afs-camera-roll.html
@@ -128,7 +128,7 @@
                     prebuilt-animation="from-right"
                     reveal-header
                     threshold="64"
-                    title="My Photos"
+                    title="[[_title]]"
                     on-header-overlay-threshold-triggered-changed="__overlayTriggered"
                     on-overlay-exiting="__hideScale"
                     on-overlay-reset="__reset">
@@ -139,7 +139,8 @@
   </div>
 
   <afs-multiselect-btns id="multi"
-                        data="[[data]]" 
+                        data="[[data]]"
+                        hidden="[[_isSelector]]"
                         slot="top-toolbar-buttons-slot"
                         on-all-changed="__allChanged"
                         on-hide-checkboxes-changed="__hideCheckboxesChanged">
