Now clicking on confirm-selection and delete modal backdrop areas dismisses the associated modal.

--- a/modals/afs-confirm-selection-modal.html
+++ b/modals/afs-confirm-selection-modal.html
@@ -1,6 +1,6 @@
 
 <style include="app-shared-styles">
-	
+  
   #item {
     display:     flex;
     align-items: center;
@@ -29,7 +29,8 @@
 
 
 <app-modal id="modal"
-           heading="Confirm Selection">
+           heading="Confirm Selection"
+           on-click="__dismissBtnClicked">
 
   <div id="content"
        slot="card-content-slot">
