--- a/modals/afs-delete-modal.html
+++ b/modals/afs-delete-modal.html
@@ -43,7 +43,8 @@
 
 
 <app-modal id="modal"
-           heading="Confirm Delete">
+           heading="Confirm Delete"
+           on-click="__dismissBtnClicked">
 
   <div id="content"
        slot="card-content-slot">
