--- a/app-file-system.html
+++ b/app-file-system.html
@@ -45,7 +45,8 @@
                   multiple="[[multiple]]"
                   no-upload-confirm="[[noUploadConfirm]]"
                   unit="[[unit]]"
-                  on-delete-previous="__deletePrevious"
+                  on-delete-previous="__deletePreviousHandler"
+                  on-items-saved="__itemsSavedHandler"
                   on-open-list="openList"
                   on-open-save-as-modal="__openSaveAsModal"
                   on-progress-changed="__progressChangedHandler"
