Firing a new app-file-system-files-added event. Updated deps.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -46,6 +46,7 @@
                   no-upload-confirm="[[noUploadConfirm]]"
                   unit="[[unit]]"
                   on-delete-previous="__deletePreviousHandler"
+                  on-files-added="__filesAddedHandler"
                   on-items-saved="__itemsSavedHandler"
                   on-open-list="openList"
                   on-open-save-as-modal="__openSaveAsModal"
