Migrated to new app-core repo. Updated deps.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -8,12 +8,12 @@
     --afs-dark-mode-start-gradient:  var(--app-background-color) 40%;
 
     /* Available to adjust to taste to match app look and feel. */
-    --afs-light-mode-end-gradient: var(--app-light-color) 100%;
-    --afs-dark-mode-end-gradient:  var(--app-dark-color)  180%;
+    --afs-light-mode-end-gradient: var(--app-primary-light-color) 100%;
+    --afs-dark-mode-end-gradient:  var(--app-primary-dark-color)  180%;
 
     /* Available to adjust to taste to match app look and feel. */
-    --afs-gradient-text-color:           var(--dark-text-color);
-    --afs-gradient-secondary-text-color: var(--secondary-text-color);
+    --afs-gradient-text-color:           var(--app-dark-text);
+    --afs-gradient-secondary-text-color: var(--app-secondary-text);
     --afs-gradient-focus-color:          var(--app-primary-color);
 
 
