--- a/editors/afs-image-filters.html
+++ b/editors/afs-image-filters.html
@@ -16,8 +16,8 @@
 	
 	.iron-selected {
 		outline: 					none;
-		background-color: var(--app-dark-color);
-		color: 						var(--app-dark-color-text);
+		background-color: var(--app-primary-dark-color);
+		color: 						var(--app-primary-dark-color-text);
 	}
 
 </style>
