--- a/editors/afs-metadata-page.html
+++ b/editors/afs-metadata-page.html
@@ -69,7 +69,7 @@
   .save-btn[disabled] {
     position:         static;
     background-color: var(--app-disabled-color);
-    color:            var(--disabled-text-color);
+    color:            var(--app-disabled-text);
   }
 
   .info-item {
@@ -181,7 +181,7 @@
   </div>
 
   <div class="info-item">
-    <iron-icon icon="app-icons:event"></iron-icon>
+    <iron-icon icon="afs-file-icons:event"></iron-icon>
     <span class="shared-single-line-truncate">[[_dateTime]]</span>
   </div>
 
@@ -201,7 +201,7 @@
   </div>
 
   <div class="info-item">
-    <iron-icon icon="app-icons:fingerprint"></iron-icon>
+    <iron-icon icon="afs-file-icons:fingerprint"></iron-icon>
     <span class="shared-single-line-truncate">[[item.uid]]</span>
   </div>
 
