--- a/editors/afs-rotation-slider.html
+++ b/editors/afs-rotation-slider.html
@@ -18,7 +18,7 @@
 		width: 		3px;
 		height: 	32px;
 		z-index:  1;
-		background-color: var(--app-accent-color);
+		background-color: var(--app-secondary-color);
 	}
 
 	#scroller {
@@ -43,7 +43,7 @@
 	svg {
 		width: 	150%;
 		margin: 16px 50% 8px 50%;
-		fill: 	var(--disabled-text-color);
+		fill: 	var(--app-disabled-text);
 	}
 
 </style>
