--- a/lists/afs-processing-error-icon.html
+++ b/lists/afs-processing-error-icon.html
@@ -19,14 +19,14 @@
 
 	iron-icon {
 		margin: 					8px;
-		background-color: var(--constant-light-text, white);
+		background-color: var(--app-constant-light-text, white);
 		border-radius: 		50%;
 	}
 
 	#content {
 		padding: 8px 16px;
 		background-color: var(--app-background-color);
-		color: 	 					var(--dark-text-color);
+		color: 	 					var(--app-dark-text);
 	}
 
 </style>
