--- a/lists/afs-processing-icon.html
+++ b/lists/afs-processing-icon.html
@@ -10,8 +10,8 @@
     bottom: 	6px; /* So the icon completely covers the icon-button behind it. */
     padding: 	4px;
     background-color: transparent;
-		color: 	 					var(--app-dark-color);
-		transition: 			transform 0.2s var(--custom-ease);
+		color: 	 					var(--app-primary-dark-color);
+		transition: 			transform 0.2s var(--app-custom-ease);
 		transform:  			scale(0, 0);
 	}
 
@@ -26,7 +26,7 @@
     left: 		 50%;
     height: 	 12px;
     width: 		 12px;
-    color: 		 var(--app-dark-color-text);
+    color: 		 var(--app-primary-dark-color-text);
     transform: translate(-50%, -50%);
 	}
 
@@ -34,7 +34,7 @@
 		animation-name: 					 rotate;
 		animation-duration: 			 2s;
 		animation-iteration-count: infinite;
-		animation-timing-function: var(--custom-ease);
+		animation-timing-function: var(--app-custom-ease);
 	}
 
 	@keyframes rotate {
