--- a/lists/afs-quick-options.html
+++ b/lists/afs-quick-options.html
@@ -11,7 +11,7 @@
     bottom:          0px;
     left:            0px;
     opacity:         0;
-    transition:      transform 0.2s var(--custom-ease, ease-in),
+    transition:      transform 0.2s var(--app-custom-ease, ease-in),
                      opacity 0.15s linear 0.05s;
     transform:       scale(0, 0);
     -webkit-backdrop-filter: blur(4px);
