--- a/lists/afs-roll-item.html
+++ b/lists/afs-roll-item.html
@@ -35,7 +35,7 @@
   /* Keyboard-only focus styles hack. */
   #wrapper:focus > afs-file-thumbnail {
     outline-offset: -2px;
-    outline:         var(--app-accent-color) solid 2px; 
+    outline:         var(--app-secondary-color) solid 2px; 
   }
 
   afs-processing-icon {
