--- a/lists/afs-select-checkbox.html
+++ b/lists/afs-select-checkbox.html
@@ -23,7 +23,7 @@
     position:      absolute;
     top:           8px;
     right:         8px;
-    border:        2px solid var(--light-text-color);
+    border:        2px solid var(--app-light-text);
     border-radius: 2px;
   }
 
