--- a/lists/afs-upload-controls.html
+++ b/lists/afs-upload-controls.html
@@ -64,13 +64,13 @@
      hidden="[[_hideBtns]]">
   <paper-icon-button class="control-button"
                      hidden="[[_paused]]"
-                     icon="app-icons:pause" 
+                     icon="afs-file-icons:pause" 
                      alt="Pause file upload" 
                      on-click="__pauseUploadButtonClicked">
   </paper-icon-button>
   <paper-icon-button class="control-button"
                      hidden="[[!_paused]]"
-                     icon="app-icons:play-arrow" 
+                     icon="afs-file-icons:play-arrow" 
                      alt="Resume file upload" 
                      on-click="__resumeUploadButtonClicked">
   </paper-icon-button>
