--- a/modals/afs-delete-modal.html
+++ b/modals/afs-delete-modal.html
@@ -26,7 +26,7 @@
   }
 
   #note {
-    color:     var(--secondary-text-color);
+    color:     var(--app-secondary-text);
     font-size: 14px;
   }
 
@@ -36,7 +36,7 @@
 
   #delete-btn {
     background-color: var(--app-error-color, red);
-    color:            var(--constant-light-text);
+    color:            var(--app-error-color-text);
   }
 
 </style>
