--- a/modals/afs-save-as-modal.html
+++ b/modals/afs-save-as-modal.html
@@ -11,17 +11,17 @@
   }
 
   #note {
-    color:     var(--secondary-text-color);
+    color:     var(--app-secondary-text);
     font-size: 14px;
   }
 
   #skip-btn {
-    color: var(--app-accent-color);
+    color: var(--app-secondary-color);
   }
 
   #update-btn {
-    background-color: var(--app-accent-color);
-    color:            var(--app-accent-color-text);
+    background-color: var(--app-secondary-color);
+    color:            var(--app-secondary-color-text);
   }
 
 </style>
