--- a/shared/afs-action-buttons.html
+++ b/shared/afs-action-buttons.html
@@ -6,7 +6,7 @@
   }
 
   paper-icon-buton[disabled] {
-    color: var(--disabled-text-color);
+    color: var(--app-disabled-text);
   }
 
   a {
@@ -16,7 +16,7 @@
 
   a.disabled {
     pointer-events: none;
-    color:          var(--disabled-text-color);
+    color:          var(--app-disabled-text);
   }
 
 </style>
