--- a/shared/afs-file-thumbnail.html
+++ b/shared/afs-file-thumbnail.html
@@ -45,7 +45,7 @@
     position: absolute;
     top:      8px;
     left:     8px;
-    color:    var(--constant-light-text, white);
+    color:    var(--app-constant-light-text, white);
   }
 
 </style>
