--- a/shared/afs-progress-bar.html
+++ b/shared/afs-progress-bar.html
@@ -6,9 +6,9 @@
 		justify-content:  center;
 		height:  					64px;
 		font-size:  			12px;
-    transition: 			transform 0.3s var(--custom-ease);
-    background-color: var(--app-dark-color);
-    color:            var(--app-dark-color-text);
+    transition: 			transform 0.3s var(--app-custom-ease);
+    background-color: var(--app-primary-dark-color);
+    color:            var(--app-primary-dark-color-text);
     box-shadow: 			0 2px 2px 0 rgba(0, 0, 0, 0.14),
                 			0 1px 5px 0 rgba(0, 0, 0, 0.12),
                 			0 3px 1px -2px rgba(0, 0, 0, 0.2);
@@ -42,16 +42,16 @@
   	width: 	 44px;
   	padding: 0px;
   	--dial-width:  	8px;
-  	--label-color: 	var(--app-dark-color-text);
+  	--label-color: 	var(--app-primary-dark-color-text);
   	--label-size:  	32px;
   	--label-weight: normal;
-  	--value-color: 	var(--app-accent-color);
+  	--value-color: 	var(--app-secondary-color);
   	--value-width: 	8px;
   }
 
   paper-progress {
     width: 100%;
-    --paper-progress-active-color: var(--app-accent-color);
+    --paper-progress-active-color: var(--app-secondary-color);
   }
 
 </style>
