--- a/sources/afs-drop-zone.html
+++ b/sources/afs-drop-zone.html
@@ -8,13 +8,13 @@
     overflow:            hidden;
     background-color:    var(--app-background-color);
 
-    --dz-active-bgcolor: var(--app-light-color);
-    --dz-active-color:   var(--app-accent-color);
-    --dz-color:          var(--secondary-text-color);
-    --dz-disabled-color: var(--disabled-text-color);
+    --dz-active-bgcolor: var(--app-primary-light-color);
+    --dz-active-color:   var(--app-secondary-color);
+    --dz-color:          var(--app-secondary-text);
+    --dz-disabled-color: var(--app-disabled-text);
     --dz-feedback-color: var(--app-error-color, var(--paper-red-600));
     --dz-hover-bgcolor:  var(--app-body-color);
-    --dz-hover-color:    var(--secondary-text-color);
+    --dz-hover-color:    var(--app-secondary-text);
     --dz-icon-color:     var(--app-primary-color);
     --dz-icon-size:      40px;
   }
