--- a/sources/afs-file-sources.html
+++ b/sources/afs-file-sources.html
@@ -9,7 +9,7 @@
     padding: 0px;
 
     background: linear-gradient(
-      var(--app-dark-color) var(--background-color-crossover), 
+      var(--app-primary-dark-color) var(--background-color-crossover), 
       var(--app-body-color) var(--background-color-crossover)
     );
   }
@@ -26,8 +26,8 @@
 
   #toolbar-background {
     height: 100%;
-    background-color: var(--app-dark-color);
-    color:            var(--app-dark-color-text);
+    background-color: var(--app-primary-dark-color);
+    color:            var(--app-primary-dark-color-text);
   }
 
   #content {
