--- a/sources/afs-list-icon-button.html
+++ b/sources/afs-list-icon-button.html
@@ -18,7 +18,7 @@
 	#gear {
     height: 26px;
     width: 	26px;
-    color: 	var(--app-light-color);
+    color: 	var(--app-primary-light-color);
 	}
 
 	.gear {		
@@ -34,7 +34,7 @@
 		animation-name: 					 rotate-gear;
 		animation-duration: 			 2s;
 		animation-iteration-count: infinite;
-		animation-timing-function: var(--custom-ease);
+		animation-timing-function: var(--app-custom-ease);
 	}
 
 	@keyframes rotate-gear {
@@ -51,13 +51,13 @@
 		width:  100%;
 		border-radius: 		50%;
 		overflow: 				hidden;
-		background-color: var(--app-accent-color);
+		background-color: var(--app-secondary-color);
 	}
 
 	#arrow {
 		height: 	 12px;
 		width: 		 12px;
-    color: 		 var(--app-accent-color-text);
+    color: 		 var(--app-secondary-color-text);
     transform: translateY(100%);
 	}
 
@@ -65,7 +65,7 @@
 		animation-name: 					 translate-arrow;
 		animation-duration: 			 2s;
 		animation-iteration-count: infinite;
-		animation-timing-function: var(--custom-ease);
+		animation-timing-function: var(--app-custom-ease);
 	}
 
 	@keyframes translate-arrow {
