--- a/sources/afs-upload-actions-card.html
+++ b/sources/afs-upload-actions-card.html
@@ -16,7 +16,7 @@
 		width: 		 		100%;
 		max-width: 		414px;
 		touch-action: none;
-    transition: 	transform 0.3s var(--custom-ease);
+    transition: 	transform 0.3s var(--app-custom-ease);
     transform: 		translateY(100%);
 	}
 
@@ -29,7 +29,7 @@
 	}
 
 	#note {
-    color:     var(--secondary-text-color);
+    color:     var(--app-secondary-text);
     font-size: 14px;
   }
 
@@ -44,12 +44,12 @@
   }
 
 	#rename-btn {
-		color: var(--app-accent-color);
+		color: var(--app-secondary-color);
 	}
 
 	#go-btn {
-		background-color: var(--app-accent-color);
-		color: 						var(--app-accent-color-text);
+		background-color: var(--app-secondary-color);
+		color: 						var(--app-secondary-color-text);
 	}
 
 </style>
