--- a/viewers/afs-photo-viewer.html
+++ b/viewers/afs-photo-viewer.html
@@ -49,7 +49,7 @@
     position: absolute;
     top:      16px;
     left:     16px;
-    color:    var(--constant-light-text);
+    color:    var(--app-constant-light-text);
   }
 
   iron-icon {
@@ -63,7 +63,7 @@
   .hint {
     animation-name: hint;
     animation-duration: 2s;
-    animation-timing-function: var(--custom-ease);
+    animation-timing-function: var(--app-custom-ease);
   }
 
   @keyframes hint {
