--- a/viewers/afs-video-viewer.html
+++ b/viewers/afs-video-viewer.html
@@ -25,7 +25,7 @@
     position: absolute;
     top:      16px;
     left:     16px;
-    color:    var(--constant-light-text);
+    color:    var(--app-constant-light-text);
   }
 
 </style>
