--- a/editors/afs-image-adjuster.html
+++ b/editors/afs-image-adjuster.html
@@ -42,13 +42,13 @@
     font-size: 				10px;
 		border-radius:  	3px;
 		background-color: var(--app-background-color);
-		color: 						var(--disabled-text-color);
+		color: 						var(--app-disabled-text);
 	}
 
 	#clear[pressed] {
 		outline: 					none;
-		background-color: var(--app-dark-color);
-		color: 						var(--constant-light-text);
+		background-color: var(--app-primary-dark-color);
+		color: 						var(--app-primary-dark-color-text);
 	}
 
 </style>
