--- a/editors/afs-image-cropper.html
+++ b/editors/afs-image-cropper.html
@@ -43,7 +43,7 @@
     font-size: 				10px;
 		border-radius:  	0px;
 		background-color: var(--app-background-color);
-		color: 						var(--disabled-text-color);
+		color: 						var(--app-disabled-text);
 	}
 
 	.grouped::after {
@@ -54,7 +54,7 @@
 		right: 	 -1px;
 		width: 		2px;
 		opacity: 	0.15;
-		background-color: var(--disabled-text-color);
+		background-color: var(--app-disabled-text);
 	}
 
 	.first {
@@ -73,8 +73,8 @@
 	paper-button[pressed],
 	.iron-selected {
 		outline: 					none;
-		background-color: var(--app-dark-color);
-		color: 						var(--constant-light-text);
+		background-color: var(--app-primary-dark-color);
+		color: 						var(--app-primary-dark-color-text);
 	}
 
 	#rotation {
