--- a/editors/afs-image-editor-item.html
+++ b/editors/afs-image-editor-item.html
@@ -37,13 +37,13 @@
 		width: 		 100%;
 		max-width: 414px;
 		margin: 	 0px;
-		background-color: var(--app-accent-color);
-		color: 						var(--app-accent-color-text);
+		background-color: var(--app-secondary-color);
+		color: 						var(--app-secondary-color-text);
 	}
 
 	#btn[disabled] {
 		background-color: var(--app-disabled-color);
-		color: 						var(--disabled-text-color);
+		color: 						var(--app-disabled-text);
 	}
 
 
