--- a/lists/afs-multiselect-btns.html
+++ b/lists/afs-multiselect-btns.html
@@ -12,7 +12,7 @@
   .btn {
     opacity:    0;
     transform:  translateX(100%);
-    transition: transform 0.3s var(--custom-ease),
+    transition: transform 0.3s var(--app-custom-ease),
                 opacity 0.2s ease-out;
   }
 
@@ -36,13 +36,13 @@
   #selectBtn {
     border-radius:        50%;    
     --lower-badge-right: -50%;
-    --lower-badge-background-color: var(--app-accent-color); 
+    --lower-badge-background-color: var(--app-secondary-color); 
     --upper-badge-right: -2px;
     --upper-badge-top:   -2px;
   }
 
   #selectBtn[active] {
-    background-color: var(--constant-light-text);
+    background-color: var(--app-primary-color-text);
     color:            var(--app-primary-color);
   }
 
@@ -55,8 +55,8 @@
     border-radius:    4px;
     font-size:        12px;
     pointer-events:   none;
-    background-color: var(--app-dark-color);
-    color:            var(--app-dark-color-text);
+    background-color: var(--app-primary-dark-color);
+    color:            var(--app-primary-dark-color-text);
   }
 
 </style>
