--- a/shared/afs-edit-photo-fab.html
+++ b/shared/afs-edit-photo-fab.html
@@ -8,12 +8,12 @@
     bottom:   16px;    
     z-index:  1;
 
-    --fab-animation-ease: var(--custom-ease, cubic-bezier(0.49, 0.01, 0, 1));
+    --fab-animation-ease: var(--app-custom-ease, cubic-bezier(0.49, 0.01, 0, 1));
   }
 
   #fab {    
-    background-color: var(--app-accent-color);
-    color:            var(--app-accent-color-text);
+    background-color: var(--app-secondary-color);
+    color:            var(--app-secondary-color-text);
     transition:       transform 0.4s var(--fab-animation-ease), opacity 0.2s ease-in 0.15s;
   }
 
