Adjusted theming definitions for a few elements. Updated deps.

--- a/lists/afs-camera-roll.html
+++ b/lists/afs-camera-roll.html
@@ -47,6 +47,11 @@
     background-color: var(--app-primary-dark-color);
   }
 
+  #multi {
+    --button-active-background-color: var(--app-primary-dark-color-text);
+    --button-active-color:            var(--app-primary-dark-color);
+  }
+
   /* A non-scrolling faux background. */
   #content-background {
     position:   fixed;
