--- a/lists/afs-multiselect-btns.html
+++ b/lists/afs-multiselect-btns.html
@@ -3,6 +3,9 @@
 
   :host {
     display: flex;
+
+    --button-active-background-color: var(--app-primary-color-text);
+    --button-active-color:            var(--app-primary-color);
   }
 
   :host([hidden]) {
@@ -42,8 +45,8 @@
   }
 
   #selectBtn[active] {
-    background-color: var(--app-primary-color-text);
-    color:            var(--app-primary-color);
+    background-color: var(--button-active-background-color);
+    color:            var(--button-active-color);
   }
 
   #all-badge {
