--- a/carousel/afs-paginated-carousel.html
+++ b/carousel/afs-paginated-carousel.html
@@ -66,7 +66,7 @@
 
 
 <app-carousel id="carousel"  
-              aspect-ratio="fill"
+              aspect="fill"
               disabled="[[disabled]]"
               nav="[[_nav]]"
               on-app-carousel-centered-item-changed="__centeredItemChanged">
