Updated to app-carousel api breaking changes. Removed unecessary darkMode data bindings down to each instance of app-map and map-overlay due to its new api which gets darkMode updates directly from the top level #app element. Updated deps.

--- a/carousel/afs-carousel-item.html
+++ b/carousel/afs-carousel-item.html
@@ -41,6 +41,7 @@
   -->
   <lazy-image class="item"
               alt="[[item.displayName]]"
+              icon=""
               placeholder="[[_imgPlaceholder]]"
               src="[[_imgSrc]]"
               sizing="contain"
