--- a/carousel/afs-paginated-carousel.html
+++ b/carousel/afs-paginated-carousel.html
@@ -69,7 +69,7 @@
               aspect="fill"
               disabled="[[disabled]]"
               nav="[[_nav]]"
-              on-app-carousel-centered-item-changed="__centeredItemChanged">
+              on-app-carousel-centered-changed="__carouselCenteredChanged">
 
 
   <div id="scroller" 
