--- a/editors/afs-image-editor.html
+++ b/editors/afs-image-editor.html
@@ -138,8 +138,7 @@
       <afs-image-meta current="[[_currentPage]]"
                       page="info"
                       selected="[[_selectedPage]]">
-        <afs-metadata-page dark-mode="[[darkMode]]"
-                           geolocation="[[_geolocation]]"
+        <afs-metadata-page geolocation="[[_geolocation]]"
                            hidden="[[_hideMeta]]"
                            is-img="[[_isImg]]"
                            item="[[item]]"
@@ -162,7 +161,6 @@
 
 
 <map-overlay id="mapOverlay"
-             dark-mode="[[darkMode]]"
              draggable 
              lat="[[item.geolocation.lat]]" 
              lng="[[item.geolocation.lng]]"
