Updated to new header-overlay styles api. Updated deps.

--- a/carousel/afs-photo-carousel.html
+++ b/carousel/afs-photo-carousel.html
@@ -42,13 +42,13 @@
   }
 
   #overlay {
-    box-shadow: none;
+    box-shadow:       none;
+    background-color: transparent; 
 
-    --overlay-background-color:                   transparent;    
-    --overlay-toolbar-backdrop-filter:            blur(10px);
-    --overlay-toolbar-background-parallax-height: 100%;
-    --overlay-toolbar-background-color:           transparent;
-    --overlay-toolbar-vignette-opacity:           0;
+    --header-backdrop-filter:            blur(10px);
+    --header-background-parallax-height: 100%;
+    --header-background-color:           transparent;
+    --header-vignette-opacity:           0;
   }
 
   /*
