--- a/lists/afs-camera-roll.html
+++ b/lists/afs-camera-roll.html
@@ -6,13 +6,13 @@
   }
       
   #overlay {
-    padding-bottom: 0px;
+    padding-bottom:   0px;
+    background-color: var(--app-body-color);
 
-    --overlay-toolbar-backdrop-filter:  blur(10px);
-    --overlay-toolbar-background-color: transparent;
-    --overlay-toolbar-color:            var(--app-primary-dark-color-text);
-    --overlay-toolbar-pointer-events:   none;
-    --overlay-background-color:         var(--app-body-color);
+    --header-backdrop-filter:  blur(10px);
+    --header-background-color: transparent;
+    --header-color:            var(--app-primary-dark-color-text);
+    --header-pointer-events:   none;    
   }
 
   #header-background {
