--- a/lists/afs-file-list.html
+++ b/lists/afs-file-list.html
@@ -2,9 +2,10 @@
 <style>
 
   #overlay {
-    --overlay-toolbar-background-color: var(--app-primary-color);
-    --overlay-toolbar-color:            var(--app-primary-color-text);
-    --overlay-background-color:         var(--app-body-color);
+    background-color: var(--app-body-color);
+
+    --header-background-color: var(--app-primary-color);
+    --header-color:            var(--app-primary-color-text);
   }
 
 </style>
