Updated to new html file tooling which now returns a valid template element, vs a string of html markup.

--- a/lists/afs-upload-controls.html
+++ b/lists/afs-upload-controls.html
@@ -8,10 +8,10 @@
     bottom:           0px;
     height:           40px;
     width:            100%;
-    transition:       transform 0.3s var(--custom-ease, ease-in);
+    transition:       transform 0.3s var(--app-custom-ease, ease-in);
     transform:        translateY(100%);
-    background-color: var(--app-dark-color);
-    color:            var(--app-dark-color-text);
+    background-color: var(--app-primary-dark-color);
+    color:            var(--app-primary-dark-color-text);
   }
 
   #progress-container {
@@ -28,7 +28,7 @@
 
   paper-progress {
     width: 100%;
-    --paper-progress-active-color: var(--app-accent-color);
+    --paper-progress-active-color: var(--app-secondary-color);
   }
 
   #control-buttons {
