Several minor quality of life improvements and bug fixes. Updated deps.

--- a/editors/afs-image-adjuster.html
+++ b/editors/afs-image-adjuster.html
@@ -156,7 +156,7 @@
 	<paper-button id="clear"
 								on-click="__clearClicked">
 		<iron-icon icon="afs-image-editor-icons:clear"></iron-icon>
-		<div>Clear</div>
+		<div>Reset</div>
 	</paper-button>
 
 </afs-image-editor-item>
