--- a/editors/afs-image-cropper.html
+++ b/editors/afs-image-cropper.html
@@ -270,7 +270,7 @@
 									class="grouped single"
 									on-click="__clearClicked">
 			<iron-icon icon="afs-image-editor-icons:clear"></iron-icon>
-			<div>Clear</div>
+			<div>Reset</div>
 		</paper-button>
 
 		<!-- Direction buttons. -->
