--- a/editors/afs-metadata-page.html
+++ b/editors/afs-metadata-page.html
@@ -197,7 +197,7 @@
 
   <div class="info-item">
     <iron-icon icon="afs-file-icons:folder"></iron-icon>
-    <span class="shared-single-line-truncate">[[_dirName]]</span>
+    <span class="shared-single-line-truncate">[[_folder]]</span>
   </div>
 
   <div class="info-item">
